[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/BoOK.tres" type="Texture" id=1]
[ext_resource path="res://assets/mapa.tres" type="Texture" id=2]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/letter_background.jpg" type="Texture" id=4]
[ext_resource path="res://scripts/Studdy_backgroun.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/bussola.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/map.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/astrolabio.png" type="Texture" id=8]
[ext_resource path="res://assets/coin/coin(0).tres" type="Texture" id=9]
[ext_resource path="res://assets/coin/coin(2).tres" type="Texture" id=10]
[ext_resource path="res://assets/coin/coin(1).tres" type="Texture" id=11]
[ext_resource path="res://assets/coin/coin(3).tres" type="Texture" id=12]
[ext_resource path="res://assets/BarcoGerenciamento.tres" type="Texture" id=13]
[ext_resource path="res://assets/armazem.png" type="Texture" id=14]
[ext_resource path="res://assets/vinho(0).tres" type="Texture" id=15]
[ext_resource path="res://assets/icons/icon(0).tres" type="Texture" id=16]
[ext_resource path="res://assets/ships/ship35.tres" type="Texture" id=17]
[ext_resource path="res://assets/arrow(0).tres" type="Texture" id=18]
[ext_resource path="res://assets/ships/ship38.tres" type="Texture" id=19]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/FONTE.ttf"

[sub_resource type="DynamicFont" id=2]
size = 17
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/FONTE.ttf"

[sub_resource type="DynamicFont" id=4]
size = 17
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="GDScript" id=5]
script/source = "extends TextureRect
"

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Holder" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" type="Sprite" parent="Holder"]
position = Vector2( 554.28, 34.4989 )
scale = Vector2( 2.47943, 1.87998 )
texture = ExtResource( 17 )

[node name="Label2" type="Label" parent="Holder"]
margin_left = 603.112
margin_top = 21.0
margin_right = 643.112
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "0/20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector4" type="Sprite" parent="Holder"]
visible = false
position = Vector2( 1153.44, 677 )
scale = Vector2( 3.63324, 3.1071 )
texture = ExtResource( 16 )

[node name="Selector3" type="Sprite" parent="Holder"]
visible = false
position = Vector2( 1151.66, 588 )
scale = Vector2( 3.63324, 3.1071 )
texture = ExtResource( 16 )

[node name="Selector2" type="Sprite" parent="Holder"]
visible = false
position = Vector2( 1151.66, 514 )
scale = Vector2( 3.63324, 3.1071 )
texture = ExtResource( 16 )

[node name="Selector1" type="Sprite" parent="Holder"]
visible = false
position = Vector2( 1151.66, 441 )
scale = Vector2( 3.63324, 3.1071 )
texture = ExtResource( 16 )

[node name="Studdy_background" type="Control" parent="Holder"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Holder/Studdy_background"]
margin_left = 548.0
margin_top = 105.0
margin_right = 790.0
margin_bottom = 677.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Studdy_backgroun" type="Sprite" parent="Holder/Studdy_background"]
position = Vector2( 698.15, 280.723 )
scale = Vector2( 0.173832, 0.214816 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Selector1" type="Label" parent="Holder/Studdy_background"]
margin_left = 531.272
margin_top = 204.261
margin_right = 537.272
margin_bottom = 225.261
custom_fonts/font = SubResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector2" type="Label" parent="Holder/Studdy_background"]
visible = false
margin_left = 531.272
margin_top = 269.623
margin_right = 537.272
margin_bottom = 290.623
custom_fonts/font = SubResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector3" type="Label" parent="Holder/Studdy_background"]
visible = false
margin_left = 531.272
margin_top = 326.758
margin_right = 537.272
margin_bottom = 347.758
custom_fonts/font = SubResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector4" type="Label" parent="Holder/Studdy_background"]
visible = false
margin_left = 531.272
margin_top = 369.212
margin_right = 537.272
margin_bottom = 390.212
custom_fonts/font = SubResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="Holder/Studdy_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 553.209
margin_top = 204.261
margin_right = 626.089
margin_bottom = 212.901
custom_fonts/font = SubResource( 4 )
text = "BÚSSOLA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preco1" type="Label" parent="Holder/Studdy_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 685.623
margin_top = 204.261
margin_right = 758.503
margin_bottom = 212.901
custom_fonts/font = SubResource( 4 )
text = "€ 1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comprado1" type="Label" parent="Holder/Studdy_background"]
visible = false
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 685.623
margin_top = 204.261
margin_right = 758.503
margin_bottom = 212.901
custom_fonts/font = SubResource( 4 )
text = "COMPRADO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preco2" type="Label" parent="Holder/Studdy_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 685.623
margin_top = 269.623
margin_right = 758.503
margin_bottom = 278.263
custom_fonts/font = SubResource( 4 )
text = "€ 3500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comprado2" type="Label" parent="Holder/Studdy_background"]
visible = false
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 685.623
margin_top = 269.623
margin_right = 758.503
margin_bottom = 278.263
custom_fonts/font = SubResource( 4 )
text = "COMPRADO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preco3" type="Label" parent="Holder/Studdy_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 685.623
margin_top = 326.758
margin_right = 758.503
margin_bottom = 335.398
custom_fonts/font = SubResource( 4 )
text = "€ 3500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comprado3" type="Label" parent="Holder/Studdy_background"]
visible = false
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 685.623
margin_top = 326.758
margin_right = 758.503
margin_bottom = 335.398
custom_fonts/font = SubResource( 4 )
text = "COMPRADO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Holder/Studdy_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 553.209
margin_top = 269.623
margin_right = 642.089
margin_bottom = 278.263
custom_fonts/font = SubResource( 4 )
text = "CARTOGRAFIA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Holder/Studdy_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 553.209
margin_top = 326.758
margin_right = 636.089
margin_bottom = 335.398
custom_fonts/font = SubResource( 4 )
text = "ASTROLABIO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Holder/Studdy_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 548.0
margin_top = 369.212
margin_right = 630.88
margin_bottom = 401.852
custom_fonts/font = SubResource( 4 )
text = "SAIR
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map" type="Sprite" parent="Holder/Studdy_background"]
position = Vector2( 835.097, 280.723 )
scale = Vector2( 0.0507276, 0.0703192 )
texture = ExtResource( 7 )

[node name="astrolabio" type="Sprite" parent="Holder/Studdy_background"]
position = Vector2( 829.513, 338.071 )
scale = Vector2( 0.189301, 0.172307 )
texture = ExtResource( 8 )

[node name="bussola" type="Sprite" parent="Holder/Studdy_background"]
position = Vector2( 831.302, 204.261 )
scale = Vector2( 0.223602, 0.19864 )
texture = ExtResource( 6 )

[node name="Gerenciamento_background" type="Control" parent="Holder"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Studdy_backgroun2" type="Sprite" parent="Holder/Gerenciamento_background"]
position = Vector2( 704.878, 768.513 )
scale = Vector2( 0.173832, 1.1232 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="Holder/Gerenciamento_background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 553.0
margin_top = 165.0
margin_right = 825.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Holder/Gerenciamento_background/ScrollContainer"]
margin_right = 37.0
margin_bottom = 645.0

[node name="TextureRect" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_right = 37.0
margin_bottom = 26.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect2" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 37.0
margin_bottom = 56.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 37.0
margin_bottom = 86.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect4" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 37.0
margin_bottom = 116.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect5" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 37.0
margin_bottom = 146.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect6" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 37.0
margin_bottom = 176.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect7" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 37.0
margin_bottom = 206.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect8" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 37.0
margin_bottom = 236.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect9" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 37.0
margin_bottom = 266.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect10" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 37.0
margin_bottom = 296.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect11" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 37.0
margin_bottom = 326.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect12" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 37.0
margin_bottom = 356.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect13" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 37.0
margin_bottom = 386.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect14" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 37.0
margin_bottom = 416.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect15" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 37.0
margin_bottom = 446.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect16" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 37.0
margin_bottom = 476.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect17" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 37.0
margin_bottom = 506.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect18" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 510.0
margin_right = 37.0
margin_bottom = 536.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect19" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 37.0
margin_bottom = 566.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="TextureRect20" type="TextureRect" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 570.0
margin_right = 37.0
margin_bottom = 596.0
texture = ExtResource( 19 )
script = SubResource( 5 )

[node name="Label5" type="Label" parent="Holder/Gerenciamento_background/ScrollContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 37.0
margin_bottom = 645.0
custom_fonts/font = SubResource( 4 )
text = "SAIR
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mercadoria_background" type="Control" parent="Holder"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Studdy_backgroun3" type="Sprite" parent="Holder/Mercadoria_background"]
position = Vector2( 698.15, 372.533 )
scale = Vector2( 0.173832, 0.389903 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Label1" type="Label" parent="Holder/Mercadoria_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 553.209
margin_top = 204.261
margin_right = 626.089
margin_bottom = 212.901
custom_fonts/font = SubResource( 4 )
text = "VINHO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector2" type="Label" parent="Holder/Mercadoria_background"]
margin_left = 537.272
margin_top = 555.793
margin_right = 543.272
margin_bottom = 576.793
custom_fonts/font = SubResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantidade1" type="Label" parent="Holder/Mercadoria_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 652.209
margin_top = 204.261
margin_right = 725.089
margin_bottom = 212.901
custom_fonts/font = SubResource( 4 )
text = "QTD -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Valor1" type="Label" parent="Holder/Mercadoria_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 704.877
margin_top = 204.261
margin_right = 777.757
margin_bottom = 212.901
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vinho(0)" type="Sprite" parent="Holder/Mercadoria_background"]
position = Vector2( 834.085, 204.261 )
scale = Vector2( 2.03556, 1.94115 )
texture = ExtResource( 15 )

[node name="Sair" type="Label" parent="Holder/Mercadoria_background"]
anchor_right = 0.403
anchor_bottom = 0.309
margin_left = 548.0
margin_top = 555.793
margin_right = 620.88
margin_bottom = 588.433
custom_fonts/font = SubResource( 4 )
text = "Sair
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MercadoriaButton" type="Button" parent="Holder"]
margin_left = 1213.18
margin_top = 399.032
margin_right = 1276.18
margin_bottom = 469.032
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Holder/MercadoriaButton"]
position = Vector2( 35.3893, 35.9616 )
scale = Vector2( 0.371118, 0.380945 )
texture = ExtResource( 14 )

[node name="StuddyButtom" type="Button" parent="Holder"]
margin_left = 1195.0
margin_top = 640.0
margin_right = 1277.0
margin_bottom = 701.0
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="book" type="Sprite" parent="Holder/StuddyButtom"]
position = Vector2( 45.6658, 28.1571 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="ExpeditionButtom" type="Button" parent="Holder"]
margin_left = 1208.0
margin_top = 555.0
margin_right = 1277.0
margin_bottom = 624.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Holder/ExpeditionButtom"]
position = Vector2( 35.0817, 30.9194 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="GerenciamentoButton" type="Button" parent="Holder"]
margin_left = 1216.0
margin_top = 469.0
margin_right = 1306.0
margin_bottom = 540.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Holder/GerenciamentoButton"]
position = Vector2( 42.9556, 47.8185 )
scale = Vector2( 2.34752, 2.68792 )
texture = ExtResource( 13 )

[node name="HBoxContainer" type="HBoxContainer" parent="Holder"]
margin_left = 45.6348
margin_right = 134.635
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Holder/HBoxContainer"]
position = Vector2( -22.4908, 30.0592 )
scale = Vector2( 5, 5 )
frames = SubResource( 6 )
frame = 3
playing = true

[node name="Label" type="Label" parent="Holder/HBoxContainer"]
margin_top = 21.0
margin_right = 40.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "X100"

[node name="Arrow" type="Sprite" parent="Holder"]
position = Vector2( 40, 741.025 )
scale = Vector2( 10.0204, 4.88177 )
texture = ExtResource( 18 )

[node name="Arrow2" type="Sprite" parent="Holder"]
visible = false
position = Vector2( 83, 741.025 )
scale = Vector2( 10.0204, 4.88177 )
texture = ExtResource( 18 )

[node name="Arrow3" type="Sprite" parent="Holder"]
visible = false
position = Vector2( 125, 741.025 )
scale = Vector2( 10.0204, 4.88177 )
texture = ExtResource( 18 )

[node name="Arrow4" type="Sprite" parent="Holder"]
visible = false
position = Vector2( 169, 741.025 )
scale = Vector2( 10.0204, 4.88177 )
texture = ExtResource( 18 )
[connection signal="pressed" from="Holder/MercadoriaButton" to="." method="_on_MercadoriaButton_pressed"]
[connection signal="pressed" from="Holder/StuddyButtom" to="." method="_on_StuddyButtom_pressed"]
[connection signal="pressed" from="Holder/GerenciamentoButton" to="." method="_on_GerenciamentoButton_pressed"]
